--- a/src/app/content/component/pages/reservation/reservation.component.html
+++ b/src/app/content/component/pages/reservation/reservation.component.html
@@ -55,9 +55,15 @@
     </div>
 
     <div class="reservation">
-        <div class="all"> Total: {{pageTotalData}}</div>
+        <div class="all"> Total input: {{pageTotalData}}</div>
         <div class="present">Hadir: {{totalPresent}}</div>
         <div class="not-present">Berhalangan: {{totalNotPresent}}</div>
+
+        <hr/>
+        <div class="session1">Sesi 1: {{session1}}</div>
+        <div class="session2">Sesi 2: {{session2}}</div>
+        <div class="session3">Sesi 3: {{session3}}</div>
+
     </div>
 
   </div>
