--- a/src/app/content/component/pages/reservation/reservation.component.scss
+++ b/src/app/content/component/pages/reservation/reservation.component.scss
@@ -17,12 +17,23 @@
             border: 0.5px solid rgba(0,0,0,.12);
             table{
                 width: 100%;
+                
 
                 tr.mat-header-row{
                     background-color: #AA857D;
                     th{
                         font-size: 15px;
                     }
+                    th:nth-child(1){
+                        width: 20%;
+                    }
+                    th:nth-child(2){
+                        width: 5%;
+                    }
+                    th:nth-child(3){
+                        width: 50%;
+                    }
+                    
                 }
                 .icon{
                     .mat-icon{
